--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,10 @@
     "target": "es2016",
     "jsx": "react",
     "module": "commonjs",
-    "rootDir": "src", 
     "moduleResolution": "node",
-    "baseUrl": "src", 
+    "baseUrl": ".",
     "paths": {
-      "vxengine/*": ["*"],
-      "@/*": [
-        "./src/*"
-      ]
+      "@vxengine/*": ["src/*"]
     },
     "declaration": true,
     "sourceMap": true,
