--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release"
   },
+  "files": [
+    "dist",
+    "dist/assets/VXEnginePointer.webp",
+    "src/assets/VXEnginePointer.webp"
+  ],
   "peerDependencies": {
     "@emailjs/browser": "^3.12.1",
     "@fullpage/react-fullpage": "^0.1.40",
@@ -81,6 +86,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/three": "^0.157.0",
+    "assemblyscript": "^0.27.29",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
@@ -95,7 +101,8 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "latest",
-    "assemblyscript": "^0.27.29"
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^5.1.0"
   },
   "type": "module",
   "exports": {
