--- a/package.json
+++ b/package.json
@@ -1,68 +1,78 @@
 {
-  "name": "vxengine",
-  "version": "1.0.0",
-  "private": true,
+  "name": "@vexr-labs/vxengine",
+  "version": "1.0.3",
+  "private": false,
   "scripts": {
-    "build": "babel src --out-dir dist --extensions \".ts,.tsx\"",
+    "build": "webpack --mode production",
     "start": "webpack serve --mode development",
     "dev": "tsc --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "jest",
-    "prepare": "npm run build",
     "asbuild:debug": "asc assembly/index.ts --target debug",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release"
   },
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "dist/assets/VXEnginePointer.webp",
-    "src/assets/VXEnginePointer.webp"
+    "dist"
   ],
-  "peerDependencies": {
-    "@emailjs/browser": "^3.12.1",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/icons": "^1.0.2",
-    "@gsap/react": "^2.0.2",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@smakss/react-scroll-direction": "^3.1.4",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.11.8",
+    "geist": "^1.3.1",
+    "immer": "^10.1.1",
+    "meshline": "^3.3.1",
+    "next-themes": "^0.3.0",
+    "postcss-modules-values": "^4.0.0",
+    "react-resizable-panels": "^2.1.4",
+    "tslib": "^2.7.0"
+  },
+  "peerDependencies": {
     "@react-three/drei": "^9.103.0",
     "@react-three/fiber": "^8.16.1",
-    "@react-three/offscreen": "^0.0.8",
     "@react-three/postprocessing": "^2.15.1",
-    "@smakss/react-scroll-direction": "^3.1.4",
-    "@types/three": "^0.163.0",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.10",
+    "@types/howler": "^2.2.11",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/three": "^0.169.0",
     "baffle": "^0.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dat.gui": "^0.7.9",
-    "framer-motion": "^10.18.0",
     "framework-utils": "^1.1.0",
-    "geist": "^1.3.1",
     "glslify": "^7.1.1",
-    "gsap": "^3.12.4",
     "howler": "^2.2.4",
-    "interactjs": "^1.10.27",
-    "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lucide-react": "^0.424.0",
     "maath": "^0.10.7",
-    "next-themes": "^0.3.0",
-    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-id-swiper": "^4.0.0",
-    "react-multi-carousel": "^2.8.4",
-    "react-player": "^2.13.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-scroll-sync": "^0.11.2",
-    "react-vanilla-tilt": "^1.0.0",
-    "react-virtualized": "^9.22.5",
     "sass": "^1.68.0",
     "scss": "^0.2.4",
     "tailwind-merge": "^2.5.2",
@@ -70,45 +80,39 @@
     "tailwindcss-textshadow": "^2.1.3",
     "three": "^0.163.0",
     "three-stdlib": "^2.27.0",
-    "vanilla-tilt": "^1.8.1",
-    "video.js": "^8.5.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/dat.gui": "^0.7.12",
-    "@types/howler": "^2.2.11",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/three": "^0.157.0",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "assemblyscript": "^0.27.29",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "glslify-loader": "^2.0.0",
+    "interactjs": "^1.10.27",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
+    "postcss-modules-extract-imports": "^3.1.0",
+    "postcss-modules-local-by-default": "^4.0.5",
+    "postcss-modules-scope": "^3.2.0",
     "raw-loader": "^4.0.2",
+    "sass-loader": "^16.0.2",
+    "schema-utils": "^4.2.0",
+    "source-map": "^0.6.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.9",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
     "typescript": "latest",
     "url-loader": "^4.1.1",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./build/release.js",
-      "types": "./build/release.d.ts"
-    }
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-obfuscator": "^3.5.1"
   }
 }
