--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.3",
+  "version": "1.0.36",
   "private": false,
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && npm run scss-types",
     "start": "webpack serve --mode development",
     "dev": "tsc --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "test": "jest",
-    "asbuild:debug": "asc assembly/index.ts --target debug",
-    "asbuild:release": "asc assembly/index.ts --target release",
-    "asbuild": "npm run asbuild:debug && npm run asbuild:release"
+    "scss-types": "typed-scss-modules src --watch",
+    "test": "jest"
   },
   "publishConfig": {
     "access": "restricted"
@@ -41,21 +39,10 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@smakss/react-scroll-direction": "^3.1.4",
-    "classnames": "^2.5.1",
-    "framer-motion": "^11.11.8",
-    "geist": "^1.3.1",
-    "immer": "^10.1.1",
-    "meshline": "^3.3.1",
-    "next-themes": "^0.3.0",
-    "postcss-modules-values": "^4.0.0",
-    "react-resizable-panels": "^2.1.4",
-    "tslib": "^2.7.0"
-  },
-  "peerDependencies": {
     "@react-three/drei": "^9.103.0",
     "@react-three/fiber": "^8.16.1",
     "@react-three/postprocessing": "^2.15.1",
+    "@smakss/react-scroll-direction": "^3.1.4",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
     "@types/node": "latest",
@@ -64,53 +51,71 @@
     "@types/three": "^0.169.0",
     "baffle": "^0.3.6",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
     "framework-utils": "^1.1.0",
+    "geist": "^1.3.1",
     "glslify": "^7.1.1",
     "howler": "^2.2.4",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.424.0",
     "maath": "^0.10.7",
+    "meshline": "^3.3.1",
+    "next-themes": "^0.3.0",
+    "postcss-modules-values": "^4.0.0",
     "react": "^18.2.0",
     "react-icons": "^4.11.0",
-    "sass": "^1.68.0",
+    "react-resizable-panels": "^2.1.4",
     "scss": "^0.2.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-textshadow": "^2.1.3",
     "three": "^0.163.0",
     "three-stdlib": "^2.27.0",
+    "tslib": "^2.7.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@types/node-sass": "^4.11.7",
     "assemblyscript": "^0.27.29",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "css-modules-typescript-loader": "^4.0.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "glslify-loader": "^2.0.0",
     "interactjs": "^1.10.27",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "parcel": "^2.12.0",
     "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
     "postcss-modules-extract-imports": "^3.1.0",
     "postcss-modules-local-by-default": "^4.0.5",
     "postcss-modules-scope": "^3.2.0",
     "raw-loader": "^4.0.2",
+    "sass": "^1.79.5",
     "sass-loader": "^16.0.2",
     "schema-utils": "^4.2.0",
     "source-map": "^0.6.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.9",
+    "terser": "^5.36.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
+    "typed-scss-modules": "^8.0.1",
     "typescript": "latest",
     "url-loader": "^4.1.1",
+    "vite": "^5.4.9",
+    "vite-plugin-wasm": "^3.3.0",
+    "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-obfuscator": "^3.5.1"
