--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.36",
+  "version": "1.0.37",
   "private": false,
   "scripts": {
-    "build": "webpack --mode production && npm run scss-types",
+    "build": "webpack --mode production && node ./scripts/build.mjs && npm run build:css",
+    "build:css": "postcss src/globals.css -o dist/globals.css",
     "start": "webpack serve --mode development",
     "dev": "tsc --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
@@ -96,17 +97,18 @@
     "mini-css-extract-plugin": "^2.9.1",
     "parcel": "^2.12.0",
     "postcss": "^8.4.41",
+    "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "postcss-modules-extract-imports": "^3.1.0",
     "postcss-modules-local-by-default": "^4.0.5",
     "postcss-modules-scope": "^3.2.0",
     "raw-loader": "^4.0.2",
-    "sass": "^1.79.5",
-    "sass-loader": "^16.0.2",
+    "sass": "^1.80.2",
+    "sass-loader": "^12.6.0",
     "schema-utils": "^4.2.0",
     "source-map": "^0.6.1",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.14",
     "terser": "^5.36.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
