--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-resizable-panels": "^2.1.4",
+    "react-virtuoso": "^4.12.0",
     "react-window": "^1.8.10",
     "scss": "^0.2.4",
     "tailwind-merge": "^2.5.2",
