--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "sideEffects": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
     "@geist-ui/core": "^2.3.8",
@@ -121,6 +122,7 @@
     "vite": "^5.4.9",
     "vite-plugin-wasm": "^3.3.0",
     "webpack": "^5.95.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-obfuscator": "^3.5.1"
