--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.37",
+  "version": "1.0.58",
   "private": false,
   "scripts": {
-    "build": "webpack --mode production && node ./scripts/build.mjs && npm run build:css",
+    "build": "webpack --mode production",
     "build:css": "postcss src/globals.css -o dist/globals.css",
+    "postinstall": "node ./dist/scripts/postinstall.mjs",
     "start": "webpack serve --mode development",
     "dev": "tsc --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
@@ -14,19 +15,46 @@
   "publishConfig": {
     "access": "restricted"
   },
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "dist/**/*.wasm"
   ],
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
     }
   },
   "sideEffects": true,
+  "peerDependencies": {
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "^8.16.1",
+    "@react-three/postprocessing": "^2.15.1",
+    "@types/howler": "^2.2.11",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/three": "^0.169.0",
+    "baffle": "^0.3.6",
+    "framer-motion": "^11.11.8",
+    "howler": "^2.2.4",
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "scss": "^0.2.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-textshadow": "^2.1.3",
+    "three": "^0.163.0",
+    "three-stdlib": "^2.27.0",
+    "zustand": "^4.5.4",
+    "postprocessing": "^6.36.4"
+  },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
     "@geist-ui/core": "^2.3.8",
@@ -42,45 +70,23 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@react-three/drei": "^9.103.0",
-    "@react-three/fiber": "^8.16.1",
-    "@react-three/postprocessing": "^2.15.1",
     "@smakss/react-scroll-direction": "^3.1.4",
-    "@types/howler": "^2.2.11",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/three": "^0.169.0",
-    "baffle": "^0.3.6",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.8",
     "framework-utils": "^1.1.0",
     "geist": "^1.3.1",
     "glslify": "^7.1.1",
-    "howler": "^2.2.4",
-    "immer": "^10.1.1",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.424.0",
     "maath": "^0.10.7",
     "meshline": "^3.3.1",
     "next-themes": "^0.3.0",
     "postcss-modules-values": "^4.0.0",
-    "react": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-resizable-panels": "^2.1.4",
     "react-virtuoso": "^4.12.0",
     "react-window": "^1.8.10",
-    "scss": "^0.2.4",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-textshadow": "^2.1.3",
-    "three": "^0.163.0",
-    "three-stdlib": "^2.27.0",
-    "tslib": "^2.7.0",
-    "zustand": "^4.5.4"
+    "tslib": "^2.7.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.8",
@@ -90,6 +96,7 @@
     "assemblyscript": "^0.27.29",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "latest",
@@ -107,8 +114,8 @@
     "postcss-modules-local-by-default": "^4.0.5",
     "postcss-modules-scope": "^3.2.0",
     "raw-loader": "^4.0.2",
-    "sass": "^1.80.2",
-    "sass-loader": "^12.6.0",
+    "sass": "^1.80.6",
+    "sass-loader": "^16.0.3",
     "schema-utils": "^4.2.0",
     "source-map": "^0.6.1",
     "style-loader": "^4.0.0",
