--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "howler": "^2.2.4",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "postprocessing": "^6.36.4",
     "react": "^18.2.0",
     "scss": "^0.2.4",
     "tailwind-merge": "^2.5.2",
@@ -52,8 +53,7 @@
     "tailwindcss-textshadow": "^2.1.3",
     "three": "^0.163.0",
     "three-stdlib": "^2.27.0",
-    "zustand": "^4.5.4",
-    "postprocessing": "^6.36.4"
+    "zustand": "^4.5.4"
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
@@ -83,6 +83,7 @@
     "next-themes": "^0.3.0",
     "postcss-modules-values": "^4.0.0",
     "react-icons": "^4.11.0",
+    "react-json-view": "^1.21.3",
     "react-resizable-panels": "^2.1.4",
     "react-virtuoso": "^4.12.0",
     "react-window": "^1.8.10",
