--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "meshline": "^3.3.1",
     "next-themes": "^0.3.0",
     "postcss-modules-values": "^4.0.0",
+    "react-diff-viewer": "^3.1.1",
     "react-icons": "^4.11.0",
-    "react-json-view": "^1.21.3",
     "react-resizable-panels": "^2.1.4",
     "react-virtuoso": "^4.12.0",
     "react-window": "^1.8.10",
