Window Management Revamp

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.58",
+  "version": "1.0.68",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
+    "build-rollup": "rollup -c",
+    "build-vite": "vite build && tsc --emitDeclarationOnly",
+    "build-vite-no-tsc": "vite build",
     "build:css": "postcss src/globals.css -o dist/globals.css",
-    "postinstall": "node ./dist/scripts/postinstall.mjs",
     "start": "webpack serve --mode development",
     "dev": "tsc --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
@@ -15,30 +17,26 @@
   "publishConfig": {
     "access": "restricted"
   },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "dist/**/*.wasm"
   ],
   "type": "module",
   "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js"
-    }
+    "import": "./dist/index.esm.js",
+    "require": "./dist/index.cjs.js"
   },
   "sideEffects": true,
   "peerDependencies": {
-    "@react-three/drei": "^9.103.0",
-    "@react-three/fiber": "^8.16.1",
-    "@react-three/postprocessing": "^2.15.1",
+    "@react-three/drei": "^9.0.0",
+    "@react-three/fiber": "^8.0.1",
+    "@react-three/postprocessing": "^2.0.0",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
     "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
     "@types/three": "^0.169.0",
     "baffle": "^0.3.6",
     "framer-motion": "^11.11.8",
@@ -47,6 +45,7 @@
     "lodash": "^4.17.21",
     "postprocessing": "^6.36.4",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "scss": "^0.2.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +72,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@smakss/react-scroll-direction": "^3.1.4",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -84,7 +84,7 @@
     "meshline": "^3.3.1",
     "next-themes": "^0.3.0",
     "postcss-modules-values": "^4.0.0",
-    "react-diff-viewer": "^3.1.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-icons": "^4.11.0",
     "react-resizable-panels": "^2.1.4",
     "react-virtuoso": "^4.12.0",
@@ -96,7 +96,14 @@
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@rollup/plugin-url": "^8.0.2",
     "@types/node-sass": "^4.11.7",
+    "@types/react": "^18.3.14",
     "assemblyscript": "^0.27.29",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
@@ -118,6 +125,11 @@
     "postcss-modules-local-by-default": "^4.0.5",
     "postcss-modules-scope": "^3.2.0",
     "raw-loader": "^4.0.2",
+    "rollup": "^4.28.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.80.6",
     "sass-loader": "^16.0.3",
     "schema-utils": "^4.2.0",
@@ -130,7 +142,9 @@
     "typed-scss-modules": "^8.0.1",
     "typescript": "latest",
     "url-loader": "^4.1.1",
-    "vite": "^5.4.9",
+    "vite": "^5.0.0",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
     "webpack": "^5.95.0",
     "webpack-bundle-analyzer": "^4.10.2",
