--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "type": "module",
   "exports": {
     "import": "./dist/index.esm.js",
-    "require": "./dist/index.cjs.js"
+    "require": "./dist/index.cjs.js",
+    "types": "./dist/index.d.ts"
   },
   "sideEffects": true,
   "peerDependencies": {
