--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.72",
+  "version": "1.0.75",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -145,6 +145,7 @@
     "url-loader": "^4.1.1",
     "vite": "^5.0.0",
     "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-javascript-obfuscator": "^3.1.0",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
     "webpack": "^5.95.0",
