--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.89",
+  "version": "1.0.99",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -32,28 +32,28 @@
   },
   "sideEffects": true,
   "peerDependencies": {
-    "@react-three/drei": "^9.0.0",
-    "@react-three/fiber": "^8.0.1",
-    "@react-three/postprocessing": "^2.0.0",
-    "@types/howler": "^2.2.11",
-    "@types/lodash": "^4.14.202",
+    "@react-three/drei": ">=9.120.8",
+    "@react-three/fiber": ">=8.0.1",
+    "@react-three/postprocessing": ">=2.16.6",
+    "@types/howler": ">=2.2.11",
+    "@types/lodash": ">=4.14.202",
     "@types/node": "latest",
-    "@types/three": "^0.169.0 || ^0.172.0",
-    "baffle": "^0.3.6",
-    "framer-motion": "^11.11.8",
-    "howler": "^2.2.4",
-    "immer": "^10.1.1",
-    "lodash": "^4.17.21",
-    "postprocessing": "^6.36.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "scss": "^0.2.4",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-textshadow": "^2.1.3",
-    "three": "^0.163.0",
-    "three-stdlib": "^2.27.0",
-    "zustand": "^4.5.4"
+    "@types/three": ">=0.169.0",
+    "baffle": ">=0.3.6",
+    "framer-motion": ">=11.11.8",
+    "howler": ">=2.2.4",
+    "immer": ">=10.1.1",
+    "lodash": ">=4.17.21",
+    "postprocessing": ">=6.36.4",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
+    "scss": ">=0.2.4",
+    "tailwind-merge": ">=2.5.2",
+    "tailwindcss-animate": ">=1.0.7",
+    "tailwindcss-textshadow": ">=2.1.3",
+    "three": ">=0.169.0",
+    "three-stdlib": ">=2.27.0",
+    "zustand": ">=4.5.4"
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
@@ -82,9 +82,10 @@
     "glslify": "^7.1.1",
     "lucide-react": "^0.424.0",
     "maath": "^0.10.7",
-    "meshline": "^3.3.1",
+    "meshline": ">=3.3.1",
     "next-themes": "^0.3.0",
     "postcss-modules-values": "^4.0.0",
+    "r3f-perf": ">=7.2.3",
     "react-diff-viewer-continued": "^3.4.0",
     "react-icons": "^4.11.0",
     "react-resizable-panels": "^2.1.4",
@@ -146,6 +147,7 @@
     "vite": "^5.0.0",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-javascript-obfuscator": "^3.1.0",
+    "vite-plugin-lib-inject-css": "^2.2.1",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
     "webpack": "^5.95.0",
