Source Manager with Project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "immer",
         "interactable",
         "overscan",
+        "partialize",
         "precompute",
         "reinitializations",
         "Toolset",
