--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.104",
+  "version": "1.0.105",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -92,7 +92,8 @@
     "react-virtuoso": "^4.12.0",
     "react-window": "^1.8.10",
     "react18-json-view": "^0.2.8",
-    "tslib": "^2.7.0"
+    "tslib": "^2.7.0",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.8",
