--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "precompute",
         "reinitializations",
         "Toolset",
+        "uuidv",
         "vxengine",
         "vxkey",
         "vxkeys",
