--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "esModuleInterop": true,
     "noEmitOnError": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
+    "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": false,
     "strictFunctionTypes": false,
