Trees amd fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "partialize",
         "precompute",
         "reinitializations",
+        "STATICPROP",
         "Toolset",
         "uuidv",
         "vxengine",
