--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.115",
+  "version": "1.0.117",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -123,6 +123,7 @@
     "less-loader": "^12.2.0",
     "mini-css-extract-plugin": "^2.9.1",
     "parcel": "^2.12.0",
+    "postcss": "^8.5.2",
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "postcss-modules-extract-imports": "^3.1.0",
