--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
   },
   "sideEffects": true,
   "peerDependencies": {
-    "@react-three/drei": ">=9.120.8",
-    "@react-three/fiber": ">=8.0.1",
-    "@react-three/postprocessing": ">=2.16.6",
     "@types/howler": ">=2.2.11",
     "@types/lodash": ">=4.14.202",
     "@types/node": "latest",
@@ -45,8 +42,8 @@
     "immer": ">=10.1.1",
     "lodash": ">=4.17.21",
     "postprocessing": ">=6.36.4",
-    "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "scss": ">=0.2.4",
     "tailwind-merge": ">=2.5.2",
     "tailwindcss-animate": ">=1.0.7",
@@ -56,60 +53,64 @@
     "zustand": ">=4.5.4"
   },
   "dependencies": {
-    "@fullpage/react-fullpage": "^0.1.40",
+    "@fullpage/react-fullpage": "^0.1.48",
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/icons": "^1.0.2",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@smakss/react-scroll-direction": "^3.1.4",
-    "@tailwindcss/typography": "^0.5.15",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-alert-dialog": ">=1.1.7-rc.6",
+    "@radix-ui/react-context-menu": ">=2.2.7-rc.6",
+    "@radix-ui/react-dialog": ">=1.1.7-rc.6",
+    "@radix-ui/react-icons": ">=1.3.2",
+    "@radix-ui/react-label": ">=2.1.3-rc.5",
+    "@radix-ui/react-menubar": ">=1.1.7-rc.6",
+    "@radix-ui/react-popover": ">=1.1.7-rc.6",
+    "@radix-ui/react-scroll-area": ">=1.2.4-rc.6",
+    "@radix-ui/react-select": ">=2.1.7-rc.5",
+    "@radix-ui/react-slider": ">=1.2.4-rc.5",
+    "@radix-ui/react-switch": ">=1.1.4-rc.5",
+    "@radix-ui/react-tabs": ">=1.1.4-rc.6",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
+    "@react-three/postprocessing": "^3.0.4",
+    "@smakss/react-scroll-direction": "^4.2.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framework-utils": "^1.1.0",
     "geist": "^1.3.1",
     "glslify": "^7.1.1",
-    "lucide-react": "^0.424.0",
-    "maath": "^0.10.7",
+    "lucide-react": "^0.475.0",
+    "maath": "^0.10.8",
     "meshline": ">=3.3.1",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.4",
     "postcss-modules-values": "^4.0.0",
     "r3f-perf": ">=7.2.3",
     "react-colorful": "^5.6.1",
     "react-diff-viewer-continued": "^3.4.0",
-    "react-icons": "^4.11.0",
-    "react-resizable-panels": "^2.1.4",
-    "react-virtuoso": "^4.12.0",
-    "react-window": "^1.8.10",
-    "react18-json-view": "^0.2.8",
-    "tslib": "^2.7.0",
-    "uuid": "^11.0.5",
+    "react-icons": "^5.5.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-virtuoso": "^4.12.5",
+    "react-window": "^1.8.11",
+    "react18-json-view": "^0.2.9",
+    "tslib": "^2.8.1",
+    "uuid": "^11.1.0",
     "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.25.8",
-    "@babel/preset-react": "^7.25.7",
-    "@babel/preset-typescript": "^7.25.7",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-typescript": "^12.1.1",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/plugin-url": "^8.0.2",
-    "@types/node-sass": "^4.11.7",
-    "@types/react": "^18.3.14",
-    "assemblyscript": "^0.27.29",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.7",
+    "@types/node-sass": "^4.11.8",
+    "@types/react": "^19.0.10",
+    "assemblyscript": "^0.27.34",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
@@ -119,44 +120,44 @@
     "eslint-config-next": "latest",
     "glslify-loader": "^2.0.0",
     "interactjs": "^1.10.27",
-    "less": "^4.2.0",
+    "less": "^4.2.2",
     "less-loader": "^12.2.0",
-    "mini-css-extract-plugin": "^2.9.1",
-    "parcel": "^2.12.0",
-    "postcss": "^8.5.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "parcel": "^2.13.3",
+    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "postcss-modules-extract-imports": "^3.1.0",
-    "postcss-modules-local-by-default": "^4.0.5",
-    "postcss-modules-scope": "^3.2.0",
+    "postcss-modules-local-by-default": "^4.2.0",
+    "postcss-modules-scope": "^3.2.1",
     "raw-loader": "^4.0.2",
-    "rollup": "^4.28.1",
+    "rollup": "^4.34.8",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.80.6",
-    "sass-loader": "^16.0.3",
-    "schema-utils": "^4.2.0",
-    "source-map": "^0.6.1",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.5",
+    "schema-utils": "^4.3.0",
+    "source-map": "^0.7.4",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.14",
-    "terser": "^5.36.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
-    "typed-scss-modules": "^8.0.1",
+    "tailwindcss": "^4.0.7",
+    "terser": "^5.39.0",
+    "terser-webpack-plugin": "^5.3.11",
+    "ts-loader": "^9.5.2",
+    "typed-scss-modules": "^8.1.1",
     "typescript": "latest",
     "url-loader": "^4.1.1",
-    "vite": "^5.0.0",
+    "vite": "^6.1.1",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-javascript-obfuscator": "^3.1.0",
     "vite-plugin-lib-inject-css": "^2.2.1",
-    "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.3.0",
-    "webpack": "^5.95.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1",
+    "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "webpack-obfuscator": "^3.5.1"
   }
 }
