--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/node": "latest",
     "@types/three": ">=0.169.0",
     "baffle": ">=0.3.6",
-    "framer-motion": ">=11.11.8",
     "howler": ">=2.2.4",
     "immer": ">=10.1.1",
     "lodash": ">=4.17.21",
@@ -82,6 +81,7 @@
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "meshline": ">=3.3.1",
+    "motion": "^12.4.7",
     "next-themes": "^0.4.4",
     "postcss-modules-values": "^4.0.0",
     "r3f-perf": ">=7.2.3",
@@ -111,7 +111,6 @@
     "@types/node-sass": "^4.11.8",
     "@types/react": "^19.0.10",
     "assemblyscript": "^0.27.34",
-    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
@@ -141,7 +140,7 @@
     "schema-utils": "^4.3.0",
     "source-map": "^0.7.4",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^4.0.7",
     "terser": "^5.39.0",
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
