--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "howler": ">=2.2.4",
     "immer": ">=10.1.1",
     "lodash": ">=4.17.21",
-    "postprocessing": ">=6.36.4",
+    "postprocessing": "^6.36.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "scss": ">=0.2.4",
