--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.128",
+  "version": "1.0.129",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -78,10 +78,10 @@
     "framework-utils": "^1.1.0",
     "geist": "^1.3.1",
     "glslify": "^7.1.1",
+    "gpucomputationrender-three": "^2.0.0",
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "meshline": ">=3.3.1",
-    "motion": "^12.4.7",
     "next-themes": "^0.4.4",
     "postcss-modules-values": "^4.0.0",
     "react-colorful": "^5.6.1",
