--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.0.131",
+  "version": "1.0.132",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -109,13 +109,18 @@
     "@tailwindcss/vite": "^4.0.7",
     "@types/node-sass": "^4.11.8",
     "@types/react": "^19.0.10",
+    "@vitejs/plugin-react": "^4.3.4",
     "assemblyscript": "^0.27.34",
     "babel-loader": "^9.2.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "glslify-loader": "^2.0.0",
     "interactjs": "^1.10.27",
     "less": "^4.2.2",
@@ -148,6 +153,7 @@
     "url-loader": "^4.1.1",
     "vite": "^6.1.1",
     "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-javascript-obfuscator": "^3.1.0",
     "vite-plugin-lib-inject-css": "^2.2.1",
     "vite-plugin-top-level-await": "^1.5.0",
