--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "0.2.102",
+  "version": "1.2.103",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -79,6 +79,7 @@
     "geist": "^1.3.1",
     "glslify": "^7.1.1",
     "gpucomputationrender-three": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "meshline": ">=3.3.1",
