--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexr-labs/vxengine",
-  "version": "1.2.128",
+  "version": "1.2.134",
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
@@ -57,7 +57,7 @@
     "@geist-ui/icons": "^1.0.2",
     "@radix-ui/react-alert-dialog": ">=1.1.7-rc.6",
     "@radix-ui/react-context-menu": ">=2.2.7-rc.6",
-    "@radix-ui/react-dialog": ">=1.1.7-rc.6",
+    "@radix-ui/react-dialog": "^1.1.7-rc.6",
     "@radix-ui/react-icons": ">=1.3.2",
     "@radix-ui/react-label": ">=2.1.3-rc.5",
     "@radix-ui/react-menubar": ">=1.1.7-rc.6",
@@ -72,25 +72,27 @@
     "@react-three/postprocessing": "^3.0.4",
     "@smakss/react-scroll-direction": "^4.2.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/react-dom": "^19.1.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framework-utils": "^1.1.0",
     "geist": "^1.3.1",
     "glslify": "^7.1.1",
-    "gpucomputationrender-three": "^2.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "meshline": ">=3.3.1",
     "next-themes": "^0.4.4",
     "postcss-modules-values": "^4.0.0",
-    "react-diff-viewer-continued": "^3.4.0",
+    "react-diff-viewer-continued": "4.0.5",
     "react-icons": "^5.5.0",
+    "react-remove-scroll": "^2.6.3",
     "react-resizable-panels": "^2.1.7",
     "react-virtuoso": "^4.12.5",
     "react-window": "^1.8.11",
     "react18-json-view": "^0.2.9",
+    "three-custom-shader-material": "^6.3.1",
     "tslib": "^2.8.1",
     "uuid": "^11.1.0",
     "vite-plugin-static-copy": "^2.2.0"
@@ -108,7 +110,7 @@
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/node-sass": "^4.11.8",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
     "assemblyscript": "^0.27.34",
     "babel-loader": "^9.2.1",
