--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "clsx": "^2.1.1",
     "framework-utils": "^1.1.0",
     "geist": "^1.3.1",
+    "glsl-token-functions": "^1.0.1",
     "glslify": "^7.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
